Nearly complete first draft of lecture 3

--- a/website/lectures/lecture2.qmd
+++ b/website/lectures/lecture2.qmd
@@ -19,7 +19,6 @@ Which was the most impressive?
 
 :::{.column width="49%"}
 {{< video https://youtube.com/clip/UgkxS9IXis1jcLq7Q5oTB2ED6Dkb34FT7TmM?si=-2MwgWJsy2HkeWgb >}}
-
 :::
 
 :::{.column width="49%"}
@@ -201,7 +200,7 @@ We can now create a table of just Beth Mead's shots from EURO 2022 and add a col
 To do this, we first filter our table `wi_shots` using the player name (note, StatsBomb uses her full name!).
 Then, for every left-footed shot Mead attempted, we want to copy over the corresponding value from the table `xg_model1`, which in this cse is 0.113.
 Similarly, we want to copy over the corresponding values for right-footed shots and headers from `xg_model1` into our table for Mead's shots.
-We can do this using an [inner join](https://r4ds.hadley.nz/joins.html#sec-mutating-joins).
+We can do this using an [left join](https://r4ds.hadley.nz/joins.html#sec-mutating-joins).
 In the code below, we actually create a temporary version of `xg_model1` that drops the column recording the overall counts of the body part used for the shots in `wi_shots`. 
 This way, when we perform the join, we don't create a new column with these counts. 
 
