--- a/website/lectures/lecture3.qmd
+++ b/website/lectures/lecture3.qmd
@@ -8,6 +8,8 @@ execute:
 
 ## Overview
 
+
+
 <!--During the [March 20, 2024 game between the Dodgers and Padres](https://www.espn.com/mlb/playbyplay/_/gameId/401568469), Shohei Ohtani singled in the top of the 3rd inning and the top of the 8th inning.
 
 https://www.youtube.com/watch?v=wdvHcqXP5Ug
@@ -27,16 +29,14 @@ We can more precisely quantify this intuition using **expected runs**, which is 
 The expected runs $\rho(\textrm{o}, \textrm{br})$ is the average number of runs scored in the remainder of the half-inning following at-bats beginning with $\textrm{o}$ outs and baserunner configuration $\textrm{br}.$
 Like expected goals (XG) from [Lecture 2](lectures/lecture2.html), expected runs is a **conditional expectation**. 
 
-During a  game between the Los Angeles Dodgers and San Diego Padres, Shohei Ohtani actually faced both of the scenarios mentioned above and singled in both at-bats.
-By the end of this lecture, we will be able to quantify exactly how valuable each of those singles using **run values**, which combine changes in the number of a team is *expected* to score and the number of runs actually scored in an at-bat.
+During the [March 20, 2024 game between the Dodgers and Padres](https://www.espn.com/mlb/playbyplay/_/gameId/401568469), Shohei Ohtani actually faced both of the scenarios mentioned above and singled in both at-bats.
+In the 3rd inning, he hit a 2-out single with no runners and in the 8th inning, he hit a 1-out single with runners on first and second base.
 
+Since the second single resulted in a run scoring and the first did not, it is tempting to say that the second single is more valuable.
+However, although the first single did not directly lead to a run, it did put the Dodgers in a more favorable position, with a runner on first[^steal]
+By the end of this lecture, we will be able to quantify exactly how valuable each of those singles using **run values**, which combine changes in the number of a team can *expect* to score and the number of runs actually scored in an at-bat.
 
-<!-- motivating example: Dodgers-padres, top 3, Ohtani singles to right field; there are 2 outs and nobody on; he does steal second and advances to 3rd but is left stranded; top 8, Ohtani   singled to left field, 1 out, runners on 1st and 2nd, this drove in a run!
-
-which play was more valuable: we have to think about what might have happened if this was done over and over
-
--->
-
+[^steal]: In fact, Ohtani stole second base during the next at-bat, putting his team in an even more favorable position for scoring runs.
 
 ## Working with baseball tracking data
 
@@ -192,6 +192,23 @@ statcast2024 <-
   arrange(game_pk, inning, desc(inning_topbot), at_bat_number, pitch_number)
 ```
 We're now left with 695,135 regular season pitches.
+
+For every pitch, the StatCast dataset records the identities of the batter (`batter`), pitcher (`pitcher`), and the other fielders (`fielders_2`, ..., `fielders_9`).
+However, it does not identify them by name, instead using an ID number, which is assigned by MLB Advanced Media. 
+We can look up the corresponding player names using a database maintained by the [Chadwick Register](https://github.com/chadwickbureau/register).
+The function `baseballr::chadwick_player_lu` downloads the Chadwick database and stores it as a data table in R.
+Like with the raw pitch-by-pitch data, I recommend that you download this player identity database once and save the table as an `.RData` object for future use.
+```{r download-lookup}
+#| message: false
+#| output: false
+#| warning: false
+player_lookup <-
+  baseballr::chadwick_player_lu() %>%
+  mutate(Name = paste(name_first, name_last)) %>%
+  select(key_mlbam, Name)
+```
+
+In the data, it does n
 
 ## Expected Runs
 
@@ -375,6 +392,8 @@ $$
 \textrm{RunValue} = \textrm{RunsScored} + \rho(\textrm{o}_{\text{end}}, \textrm{br}_{\text{end}}) - \rho(\textrm{o}_{\text{start}}, \textrm{br}_{\text{start}}) 
 $$
 :::
+In a sense, run value rewards batter credits for two things, actually scoring runs and putting their team in positions to score more runs.
+At the same time, it penalizes batters who do not hit home runs or drive in runs and/or move their team to a less-favorable run expectancy.
 
 
 To do compute the run value of each at-bat in the 2024 season, we must compute
@@ -396,106 +415,225 @@ Then, we will deploy that code to the whole `statcast2024` table by grouping by 
   We can set this to be a null-state 3.000 that has expected runs equal to 0.
 -->
 
-
-add columns to `statcast2024` containing the values of $\textrm{RunsScored},$ $\rho(\textrm{o}_{\text{end}}, \textrm{br}_{\text{end}}),$ and   $\rho(\textrm{o}_{\text{start}}, \textrm{br}_{\text{start}}).$
-
 ### Calculating RunsScored
 
+StatCast numbers every at-bat within the game and every pitch within each at-bat.
+To compute the number of runs scored within each at-bat, we will:
 
+  1. Sort the pitches by at-bat number and then by pitch number in ascending order
+  2. Take the different between the *last* value of `post_bat_score` and *first* value of `bat_score` within each at-bat.
+
+Let's try to verify this by looking at pitches from the third, fourth, and fifth at-bats of Dodgers' 8th inning against the Padres[^atbatindex]
+
+[^atbatindex]: StatCast assigns each at-bat in a game a unique number. The third, fourth, and fifth at-bats during the Dodger's 8th inning were the 61st, 62nd, and 63rd at-bats of the game.
+
+```{r dodgets-345ab}
+dodgers_inning %>%
+  filter(at_bat_number %in% 61:63) %>%
+  arrange(at_bat_number, pitch_number) %>%
+  select(at_bat_number, pitch_number, bat_score, description, post_bat_score)
+```
+
+Based on the `description` column, we see that the first pitch of at-bat 62 was a foul ball and the second pitch was hit into play.
+When we look at the corresponding row (row 6) of the table, we see that that Dodgers' pre-pitch score was 1 (`bar_score = 1`) and that they scored 1 run as a result of the hit (`post_bat_score = 2`).
+Reassuringly, the difference between the value of `post_bat_score` in row 6 (the last row for at-bat 62) and the value of `bat_score` in row 5 (the first row for at-bat 62) is 1.
+We can similarly verify our procedure works in at-bat 61: the fourth value of `post_bat_score` and the first value of `bat_score` are equal and the Dodgers did not score in this at-bat.
+
+We can apply our procedure to the entirety of the Dodgers' half-inning 
+```{r dodgers-run-scored}
+dodgers_inning <-
+  dodgers_inning %>%
+  group_by(at_bat_number) %>%
+  arrange(pitch_number) %>%
+  mutate(RunsScored = last(post_bat_score) - first(bat_score)) %>%
+  ungroup()
+```
+
+We can now apply this formula to all pitches in `statcast2024` by grouping by `game_pk` and `at_bat_number`
+
+```{r runs-scored}
+statcast2024 <-
+  statcast2024 %>%
+  group_by(game_pk, at_bat_number) %>%
+  arrange(pitch_number) %>%
+  mutate(RunsScored = last(post_bat_score) - first(bat_score)) %>%
+  ungroup()
+```
 
 ### Computing the starting and ending states
 
 Except for the very last pitch in a team's innings, the ending state of that pitch is, by definition, the starting state of the next pitch.
-In order to compute $\rho(\textrm{o}_{\text{end}}, \textrm{br}_{\text{end}}),$ and $\rho(\textrm{o}_{\text{start}}, \textrm{br}_{\text{start}})$ for each at bat, we will first create a columns in `statcast2024` that encode the game state at the beginning and end of the at-bat.
+In order to compute $\rho(\textrm{o}_{\text{end}}, \textrm{br}_{\text{end}}),$ and $\rho(\textrm{o}_{\text{start}}, \textrm{br}_{\text{start}})$ for each at-bat, we will first create a columns in `statcast2024` that encode the game state at the beginning and end of the at-bat.
 
-To build up our code, let's continue with our running example of the Dodgers' 8th inning, focusing on the at the second through fifth at-bats[^1] of the inning.
-```{r dodgers-first-3ab}
-tmp <- dodgers_inning %>%
+To build up our code, let's continue with our running example of the Dodgers' 8th inning, focusing on the at the second through fourth at-bats of the inning.
+```{r dodgers-state-3ab}
+dodgers_inning %>%
+  filter(at_bat_number %in% 60:62) %>%
   arrange(at_bat_number, pitch_number) %>%
-  mutate(next_out = lead(Outs),
-         next_br = lead(BaseRunner),
+  select(at_bat_number, pitch_number, Outs, BaseRunner)
+```
+We start by creating new columns recording the `Outs` and `BaseRunner` values of the *next* pitch using the [`lead`](https://dplyr.tidyverse.org/reference/lead-lag.html) function. [^lastrow].
+
+[^lastrow]: The next value of a variable is undefined in the last row of a column, resulting in some `NA`'s. We'll deal with those later on. 
+```{r dodgers-state-lead}
+dodgers_inning %>%
+  filter(at_bat_number %in% 60:62) %>%
+  arrange(at_bat_number, pitch_number) %>%
+  select(at_bat_number, pitch_number, Outs, BaseRunner) %>%
+  mutate(next_Outs = lead(Outs),
+         next_BaseRunner = lead(BaseRunner))
+```
+Now, within each at-bat, we can look at the *last* values of `next_Outs` and `next_BaseRunner` to figure out the ending state of the at-bat.
+```{r dodgers-end-state-3ab}
+dodgers_inning %>%
+  filter(at_bat_number %in% 60:62) %>%
+  arrange(at_bat_number, pitch_number) %>%
+  select(at_bat_number, pitch_number, Outs, BaseRunner) %>%
+  mutate(next_Outs = lead(Outs),
+         next_BaseRunner = lead(BaseRunner)) %>%
+  group_by(at_bat_number) %>%
+  mutate(endOuts = last(next_Outs),
+         endBaseRunner = last(next_BaseRunner)) %>%
+  select(at_bat_number, pitch_number, Outs, BaseRunner, endOuts, endBaseRunner) %>%
+  ungroup()
+```
+
+In [Lecture 4]() and [Lecture 5](), we will work not only with the game-state (i.e., the values of `Outs` and `BaseRunner`) at the end of every at-bat but also with the actual identities of the base-runners and the location where a ball-in-play was fielded (if the batter hit the ball) at the end of every at-bat.
+We can following an essentially identical strategy of (i) sorting pitches by at-bat and pitch numbers; (ii) computing the leading value of several columns within each half-inning; (iii) grouping by at-bat number; and (iv) taking the lats of those leading values.
+
+The code below performs this calculation and also pulls out the rows corresponding to just the first pitch of every at-bat. 
+```{r endstate}
+atbat2024 <-
+  statcast2024 %>%
+  group_by(game_pk, inning, inning_topbot) %>% # divide into half-innings
+  arrange(at_bat_number, pitch_number) %>%
+  mutate(next_Outs = lead(Outs),
+         next_BaseRunner = lead(BaseRunner),
          next_on_1b = lead(on_1b),
          next_on_2b = lead(on_2b),
          next_on_3b = lead(on_3b),
-         next_hcx = lead(hc_x),
-         next_hcy = lead(hc_y),
-         next_hl = lead(hit_location)) %>%
-  group_by(at_bat_number) %>%
-  mutate(endOuts = last(next_out),
-         endBaseRunner = last(next_br),
+         next_hc_x = lead(hc_x),
+         next_hc_y = lead(hc_y),
+         next_hit_location = lead(hit_location)) %>%
+  ungroup() %>%
+  group_by(game_pk, at_bat_number) %>%
+  arrange(pitch_number) %>%
+  mutate(end_Outs = last(next_Outs),
+         end_BaseRunner = last(next_BaseRunner),
          end_on_1b = last(next_on_1b),
          end_on_2b = last(next_on_2b),
          end_on_3b = last(next_on_3b),
-         end_hc_x = last(next_hcx),
-         end_hc_y = last(next_hcy),
-         end_hit_location = last(next_hl)) %>%
-  select(at_bat_number, pitch_number, Outs, BaseRunner, on_1b, on_2b, on_3b, hc_x, hc_y, hit_location,
-         endOuts, endBaseRunner, end_on_1b, end_on_2b, end_on_3b, end_hc_x, end_hc_y, end_hit_location,
-         des) %>%
-  ungroup()
-
-# then do a join
-
-# create a column with the very next pitch
-# then, after grouping by at-bat number, create a column with the next value
-
+         end_hc_x = last(next_hc_x),
+         end_hc_y = last(next_hc_y),
+         end_hit_location = last(next_hit_location)) %>%
+  ungroup() %>%
+  filter(pitch_number == 1) %>%
+  mutate(end_bat_score = bat_score + RunsScored, end_fld_score = fld_score) %>%
+  select(game_pk, at_bat_number,inning, inning_topbot, 
+         batter, pitcher, 
+         fielder_2, fielder_3, fielder_4, fielder_5, fielder_6, fielder_7, fielder_8,
+          Outs, BaseRunner, on_1b, on_2b, on_3b, 
+         bat_score, fld_score, 
+         RunsScored, RunsRemaining,
+         end_Outs, end_BaseRunner, end_on_1b, end_on_2b, end_on_3b,
+         end_hc_x, end_hc_y, end_hit_location) %>%
+  arrange(game_pk, at_bat_number)
 ```
+
+### Computing run-values
+
+Now that we have a table `atbat2024` containing information about the starting and ending states of each at-bat, we are ready to compute run-values.
+In particular, we can use a join (just like we did with XG in Lecture 2) to add in the values of the starting and ending expected runs.
+
+Before doing that, though, we need to deal with the `NA`'s introduced by `lead()`.
+Looking at the at-bats from the Dodger's 8th inning from our running example, we see that those `NA`'s correspond to the very last at-bat of the half-inning.
+
+Before doing that, though, let's take a quick look at the rows in the table corresponding to the Dodgers' 8th inning from our running example
+
+```{r atbat-dodgers}
+atbat2024 %>%
+  filter(game_pk == 745444 & inning == 8 & inning_topbot == "Top") %>%
+  select(at_bat_number, Outs, BaseRunner, end_Outs, end_BaseRunner)
+```
+
+Because the "end of the inning" state is not one of the 24 combinations of outs and baserunner configurations in the `expected_runs` table, we're going to row to that table with `Outs=3`, `BaseRunners='000'`, and `rho = 0` (since the team cannot score any more runs in the inning once it is over!).
+```{r cleanup-expected-runs}
+expected_runs <-
+  expected_runs %>%
+  add_row(Outs=3, BaseRunner="000", rho = 0)
+
+atbat2024 <-
+  atbat2024 %>%
+  mutate(end_Outs = ifelse(is.na(end_Outs), 3, end_Outs),
+         end_BaseRunner = ifelse(is.na(end_BaseRunner), '000', end_BaseRunner))
+```
+
+We're now ready to use a `join` to append the starting and ending expected runs.
+```{r join-expected-runs}
+end_expected_runs <- 
+  expected_runs %>%
+  rename(end_Outs = Outs,
+         end_BaseRunner = BaseRunner,
+         end_rho = rho)
+
+atbat2024 <-
+  atbat2024 %>%
+  left_join(y = expected_runs, by = c("Outs", "BaseRunner")) %>%
+  left_join(y = end_expected_runs, by = c("end_Outs", "end_BaseRunner"))
+rm(end_expected_runs)
+```
+
+We can now finally compute run values
+```{r compute-runvalue}
+atbat2024 <-
+  atbat2024 %>%
+  mutate(RunValue = RunsScored + end_rho - rho)
+```
+
 
 
 
 
 We can use the `lead()` function to take the next starting state and ending state of at-bat a is the starting state of at-bat a+1
 If we arrange the at-bats in increasing order of at-bat, then we want to copy over the starting state from row (a+1) into new columns of (a) for the ending state.
-We can do this using the [`lead`](https://dplyr.tidyverse.org/reference/lead-lag.html) function.
+We can do this using the 
 
-Once we have those, we can use a join (just like we did with XG in Lecture 2) to add in the values of the starting and ending expected runs.
+Once we have those, .
 
 To do this, it will be useful to introduce one more game state, which corresponds to the end of a half-inning.
-For simplicity, we will denote it as `Outs=3` and `BaseRunner='000'`.
-will also add a new row for an end of inning (with corresponding $\rho$ value equal to 0)
-```{r cleanup-expected-runs}
-expected_runs <-
-  expected_runs %>%
-  add_row(Outs=3, BaseRunner="000", rho = 0)
+
+
+
+## Aggregate run value leaders
+
+
+Now that we have the run values for every at-bat, we can compute the total run value produced by every batter across the season.
+
+```{r re24}
+#| message: false
+re24 <- 
+  atbat2024 %>%
+  group_by(batter) %>%
+  summarise(RE24 = sum(RunValue),
+            N = n()) %>%
+  rename(key_mlbam = batter) %>%
+  inner_join(y = player_lookup) %>%
+  select(Name, RE24, N) %>%
+  arrange(desc(RE24))
+
+re24
 ```
+When we compare our top-10 to FanGraph's leaderboard for RE24, we see a lot of overlap.
+But there are some differences, especially with regards to the number of plate appearances and actual RE24 values.
+For the latter, FanGraph likely used a different expected run matrix.
+And the StatCast data is not complete; for instance, it is missing 3 games in which Judge played.
+
+<!--
+  Our dataset contains 675 PA in 155 games from Aaron Judge; in 2024 he actually player 158 games and had 704 PA.
+  
+-->
 
 
-
-```{r statcast24-abruns}
-statcast2024 <-
-  statcast2024 %>%
-  group_by(game_pk, at_bat_number) %>%
-  mutate(RunsAB = max(post_bat_score) - bat_score) %>%
-  ungroup()
-```
-
-
-
-
-```{r}
-
-post_rho <- expected_runs %>% rename(endOuts = Outs, endBaseRunner = BaseRunner, postrho = rho)
-
-dodgers_inning %>%
-  arrange(at_bat_number) %>%
-  select(at_bat_number, Outs, BaseRunner) %>%
-  mutate(postOuts = lead(Outs),
-         postBaseRunner = lead(BaseRunner)) %>%
-  mutate(postOuts = ifelse(is.na(postOuts), 3, postOuts),
-         postBaseRunner = ifelse(is.na(postBaseRunner), '000', postBaseRunner)) %>%
-  left_join(y = expected_runs, by = c("Outs", "BaseRunner")) %>%
-  left_join(y = post_rho, by = c("postOuts", "postBaseRunner")) %>%
-  select(at_bat_number, Outs, BaseRunner, rho, 
-         postOuts, postBaseRunner, postrho)
-
-
-
-```
-
-We need to get at-bats
-
-
-### Run-values
 
 <!--
   1. Compute run-value of each at-bat
@@ -511,48 +649,7 @@ We need to get at-bats
 
 
 
-Using our expected runs matrix, we can define the **run value**, which takes into account (i) the change in 
 
-Based on the outcome of the plate appearance the *state* of the game (i.e., the combination of the )
-
-
-Armed with run valu
-
-While this matrix representation is nice, we ultimately want to create a table 
-
-
-
-For reasons that will become clear shortly, we will create a new column that combines the out and baserunner configuration into a single string and will also add a new row for an end of inning (with corresponding $\rho$ value equal to 0)
-```{r cleanup-expected-runs}
-expected_runs <-
-  expected_runs %>%
-  add_row(Outs=3, BaseRunner="000", rho = 0) %>%
-  mutate(obr_key = paste(Outs, BaseRunner, sep = "."))
-```
-
-
-
-
-
-
-
-
-
-
-
-
-
-<!--
-Recall the interpretation of conditional expectation $\mathbb{E}[Y \vert X = x]$: we look at all possible combinations of $(X,Y)$ where $X = x$ and take the
-In the context of expected runs, $Y$ is the number of runs scored in the half-inning.
-And to estimate expected runs, we mirroed this definition: we looked
-
-
-
-
-  Exercise: re-compute run expectancy based on the combination of outs, baserunners, and count. 
-  What is the value of a called strike? 
--->
 
 
 
